--- a/swagger/components/schemas/water.yaml
+++ b/swagger/components/schemas/water.yaml
@@ -1,40 +1,24 @@
 type: object
 required:
   - _id
-  - name
-  - phoneNumber
-  - contactType
+  - amount
+  - date
+  - owner
 properties:
   _id:
-    description: "Contact's id"
+    description: "Unique identifier"
     type: string
     example: 65ca67e7ae7f10c88b598384
-  name:
-    description: "Contact's name"
-    type: string
-    example: 'John Doe'
-  phoneNumber:
-    description: "Contact's phoneNumber"
-    type: string
-    example: '+380927842456'
-  email:
-    description: "Contact's email"
-    type: string
-    example: 'karavaeva@gmail.com'
-  isFavourite:
-    description: 'Indicates whether the contact is marked as a favourite'
-    type: boolean
-    example: false
-  contactType:
-    description: "Contact's type"
-    type: string
-    enum: ['work', 'home', 'personal']
-    default: personal
-  parentId:
-    description: "Contact's parent id"
-    type: string
-    example: 65ca67e7ae7f10c88b598384
-  photo:
-    description: "Link to contact's photo"
-    type: string
-    example: https://res.cloudinary.com/uqwgdu/image/upload/image.png
+  amount:
+    description: "The water's volume (in ml)"
+    type: number
+    example: 100
+
+    date:
+      description: "Time to drinking water's portion"
+      type: string
+      example: "2024-03-01T10:00:00.000Z"
+    owner:
+      description: "Owner id"
+      type: string
+      example: 65ca67e7ae7f10c88b598384
