--- a/swagger/paths/water/{id}/patch.yaml
+++ b/swagger/paths/water/{id}/patch.yaml
@@ -47,6 +47,7 @@ responses:
               example: Successfully patched the data of water portion!
             data:
               type: object
-              $ref: '../../../components/schemas/water.yaml'
+              $ref: '../../../../swagger/components/schemas/water.yaml'
   '404':
     $ref: '../../../components/responses/404.yaml'
+    
